# pupphoto

./: .gitignore  README.md  albumize.py  clipboard.sh  config.py  gps.py  import.py  open_darktable.sh  open_gps_google_maps.py  pyproject.toml  remove_gps_if_banned.py  tag_quality_images.py  upload_blog.py  upload_blog.sh  upload_clipboard.py  upload_clipboard.sh  upload_commons.py  upload_photo.py  upload_photo.sh
static/: album_template.html
