[project]
name = "pupphoto"
version = "0.1.0"
description = "Personal photo import and upload scripts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "openai",
    "pillow",
    "requests",
    "tqdm",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
